<?xml version="1.0" encoding="utf-8"?>
<!--
        Copyright 2014 Martin Brabham
        Copyright 2014 Daniel Velazco
        
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        
            http://www.apache.org/licenses/LICENSE-2.0
        
            Unless required by applicable law or agreed to in writing, software
            distributed under the License is distributed on an "AS IS" BASIS,
            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            See the License for the specific language governing permissions and
            limitations under the License.
-->
<resources>

    <!-- Global Application Strings -->
    <string name="sample_color">Color</string>

    <!-- White Balance Modes -->
    <string name="wb_auto">Auto</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="wb_tungsten">Tungsten</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="wb_horizon">Horizon</string>
    <string name="wb_sunset">Sunset</string>
    <string name="wb_shade">Shade</string>
    <string name="wb_twilight">Twilight</string>
    <string name="wb_warm">Warm</string>

</resources>
